short-link/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: short-link
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: ln.hinze.dev
      http:
        paths:
          - path: /(^$|^index\.html$)
            backend:
              serviceName: short-link-www-service
              servicePort: 80
          - path: /(.+)
            backend:
              serviceName: short-link-api-service
              servicePort: 8080
  tls:
    - hosts:
        - ln.hinze.dev
      secretName: short-link-tls-secret
